--- a/index.html
+++ b/index.html
@@ -9,257 +9,256 @@
   <meta name="copyright" content="Lancee's Yggdrasil" />
   <meta name="robots" content="all" />
 
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="static/css/xrhyme.css?v=20120610" />
-	<link rel="stylesheet" type="text/css" href="static/css/data-image.css?v=20120610" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="static/css/xrhyme.css?v=20120610" />
+  <link rel="stylesheet" type="text/css" href="static/css/data-image.css?v=20120610" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-	<script src="static/js/jquery.easing.1.3.js" type="text/javascript"></script>
-	<script src="static/js/jquery.xrhyme.1.0.1.min.js?v=20120610" type="text/javascript"></script>
-	<script src="static/js/bg.scroll.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	$(document).ready(function(){
-	    $('#XContainer').xrhyme({
-	        navigationSelector : '#Nav li a',
-	        anchorMode : true,
-	        easing : 'easeOutExpo',
-	        animeComplete : function(){
-	            $('#Cat').html(['/', arguments[0] ].join('')).toggle().fadeIn();
-	        }
-	    });
-	});
-	</script>
-    <!--[if lt IE 9]>
+  <script src="static/js/jquery.easing.1.3.js" type="text/javascript"></script>
+  <script src="static/js/jquery.xrhyme.1.0.1.min.js?v=20120610" type="text/javascript"></script>
+  <script src="static/js/bg.scroll.js" type="text/javascript"></script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+      $('#XContainer').xrhyme({
+          navigationSelector : '#Nav li a',
+          anchorMode : true,
+          easing : 'easeOutExpo',
+          animeComplete : function(){
+              $('#Cat').html(['/', arguments[0] ].join('')).toggle().fadeIn();
+          }
+      });
+  });
+  </script>
+  <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+  <![endif]-->
 </head>
 
 <body>
 <h1 id="Yggdrasil" class="invisible">Lancee</h1>
 <div id="Wrapper">
 
-	<header>
-		<h1><a href="/" class="transition">X-RHYME</a></h1>
-		<div id="Cat"></div>
-		<nav id="Nav">
-			<ol class="clearfix">
-				<li id="Avatar"><a href="#Profile" title="Lancee" rel="me"></a></li>
-				<li><a href="#Works">Works</a></li>
-				<li><a href="#Mark">Mark</a></li>
-				<li><a href="#Design">LA.Ngised</a></li>
-			</ol>
-		</nav>
-	</header>
+  <header>
+    <h1><a href="/" class="transition">X-RHYME</a></h1>
+    <div id="Cat"></div>
+    <nav id="Nav">
+      <ol class="clearfix">
+        <li id="Avatar"><a href="#Profile" title="Lancee" rel="me"></a></li>
+        <li><a href="#Works">Works</a></li>
+        <li><a href="#Mark">Mark</a></li>
+        <li><a href="#Design">LA.Ngised</a></li>
+      </ol>
+    </nav>
+  </header>
 
-	<div id="XContainer">
+  <div id="XContainer">
 
-		<!--
-		<section id="Jobs" class="x_cat">
-        	<article>
-        	    <h1 class="transition">Rest In Peace Steve Jobs 1955-2011</h1>
-        	</article>
-    	</section>
-		-->
+    <!--
+    <section id="Jobs" class="x_cat">
+          <article>
+              <h1 class="transition">Rest In Peace Steve Jobs 1955-2011</h1>
+          </article>
+      </section>
+    -->
 
-	    <section id="Profile" class="x_cat">
-        	<article id="Bio">
-            	<h2>Bio</h2>
-            	<p>When the soft silver
-            	drips shimmering
-            	over the garden nights.
-            	Death, the gray mocker,
-            	comes and whispers to you......</p>
-            	<p>Always been a ACGer @<a href="http://bangumi.tv/user/lancee" target="_blank">Bangumi.tv</a></p>
-            	<p id="Blog">And here is my writing <a href="http://lancee.blogbus.com/" rel="me">Blog»</a></p>
-        	</article>
-    	    <div class="split"></div>
-    	    <div>Scrolling background via <a href="http://youlove.us/blog/the-youloveus-scrolling-background-effect-explained/" target="_blank">youlove.us</a></div>
-    	    <ul id="Social" class="clearfix">
-    	        <li><a href="http://about.me/lancee/" rel="me">About</a></li>
-    	        <li><a href="http://www.quora.com/Lancee-Ly/" rel="me">Quora</a></li>
-    	        <li><a href="http://forrst.me/lancee/" rel="me">Forrst</a></li>
-    	        <li><a href="http://cn.last.fm/user/lanceee/" rel="me">Last.fm</a></li>
-    	        <li><a href="http://www.flickr.com/photos/ly-lancee/" rel="me">Flickr</a></li>
-    	        <li><a href="https://foursquare.com/lanceee" rel="me">Foursquare</a></li>
-    	        <li id="Twitter"><a href="http://twitter.com/lanceee/" rel="me">Twitter</a></li>
-    	    </ul>
-    	</section>
+      <section id="Profile" class="x_cat">
+          <article id="Bio">
+              <h2>Bio</h2>
+              <p>When the soft silver
+              drips shimmering
+              over the garden nights.
+              Death, the gray mocker,
+              comes and whispers to you......</p>
+              <p>Always been a ACGer @<a href="http://bangumi.tv/user/lancee" target="_blank">Bangumi.tv</a></p>
+              <p id="Blog">And here is my writing <a href="http://lancee.blogbus.com/" rel="me">Blog»</a></p>
+          </article>
+          <div class="split"></div>
+          <div>Scrolling background via <a href="http://youlove.us/blog/the-youloveus-scrolling-background-effect-explained/" target="_blank">youlove.us</a></div>
+          <ul id="Social" class="clearfix">
+              <li><a href="http://about.me/lancee/" rel="me">About</a></li>
+              <li><a href="http://www.quora.com/Lancee-Ly/" rel="me">Quora</a></li>
+              <li><a href="http://forrst.me/lancee/" rel="me">Forrst</a></li>
+              <li><a href="http://cn.last.fm/user/lanceee/" rel="me">Last.fm</a></li>
+              <li><a href="http://www.flickr.com/photos/ly-lancee/" rel="me">Flickr</a></li>
+              <li><a href="https://foursquare.com/lanceee" rel="me">Foursquare</a></li>
+              <li id="Twitter"><a href="http://twitter.com/lanceee/" rel="me">Twitter</a></li>
+          </ul>
+      </section>
 
-    	<section id="Works" class="x_cat">
-        	<article>
-        	    <h2>X-Rhyme.js</h2>
-        	    <div class="notes">
-        	        <p>X-Rhyme.js is a jQuery plugin for horizontal websites.</p>
-        	        <p>It helps you build horizontal pages easier, enables custom function for your needs.
-        	        Check out demos within» : )</p>
-        	    </div>
-        	    <aside id="XRhymejs" class="x_image">
-        	        <a href="https://github.com/lancee/x-rhyme.js">fork on github</a>
-        	    </aside>
-        	</article>
+      <section id="Works" class="x_cat">
+          <article>
+              <h2>X-Rhyme.js</h2>
+              <div class="notes">
+                  <p>X-Rhyme.js is a jQuery plugin for horizontal websites.</p>
+                  <p>Helps you build horizontal pages easier, check out demos within» : )</p>
+              </div>
+              <aside id="XRhymejs" class="x_image">
+                  <a href="https://github.com/lancee/x-rhyme.js">fork on github</a>
+              </aside>
+          </article>
 
-    	</section>
+      </section>
 
-    	<section id="Mark" class="x_cat">
-        	<article>
-        	    <h2>Capriccioso cantabile〜☆</h2>
-    	    	<ul class="clearfix">
-    	    	    <li>
-    	    	    	<a href="http://www.v2ex.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>V2EX</strong>
-    	    	    		v2ex.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://dribbble.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Dribbble</strong>
-    	    	    		dribbble.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://demoslam.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Google Demo Slam</strong>
-    	    	    		demoslam.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://www.quora.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Quora</strong>
-    	    	    		quora.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://www.smashingmagazine.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Smashing Magazine</strong>
-    	    	    		smashingmagazine.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://html5boilerplate.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>HTML5 Boilerplate</strong>
-    	    	    		html5boilerplate.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://forrst.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Forrst</strong>
-    	    	    		forrst.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://start.io/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>start.io</strong>
-    	    	    		start.io
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://cssline.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>CSSline</strong>
-    	    	    		cssline.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="https://github.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>GitHub</strong>
-    	    	    		gitHub.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://tutsplus.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Tuts+ Network</strong>
-    	    	    		tutsplus.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://nodejs.org/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>node.js</strong>
-    	    	    		nodejs.org
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://stackoverflow.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Stack Overflow</strong>
-    	    	    		stackoverflow.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://www.typeisbeautiful.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Type is Beautiful</strong>
-    	    	    		typeisbeautiful.com
-    	    	    	</a>
-    	    	    </li>
-    	    	    <li>
-    	    	    	<a href="http://www.wolframalpha.com/" rel="bookmark" target="_blank">
-    	    	    		<div class="x_icon"></div>
-    	    	    		<strong>Wolfram | Alpha</strong>
-    	    	    		wolframalpha.com
-    	    	    	</a>
-    	    	    </li>
-    	    	</ul>
-    	    </article>
-    	</section>
+      <section id="Mark" class="x_cat">
+          <article>
+              <h2>Capriccioso cantabile〜☆</h2>
+            <ul class="clearfix">
+                <li>
+                  <a href="http://www.v2ex.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>V2EX</strong>
+                    v2ex.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://dribbble.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Dribbble</strong>
+                    dribbble.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://demoslam.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Google Demo Slam</strong>
+                    demoslam.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://www.quora.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Quora</strong>
+                    quora.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://www.smashingmagazine.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Smashing Magazine</strong>
+                    smashingmagazine.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://html5boilerplate.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>HTML5 Boilerplate</strong>
+                    html5boilerplate.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://forrst.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Forrst</strong>
+                    forrst.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://start.io/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>start.io</strong>
+                    start.io
+                  </a>
+                </li>
+                <li>
+                  <a href="http://cssline.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>CSSline</strong>
+                    cssline.com
+                  </a>
+                </li>
+                <li>
+                  <a href="https://github.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>GitHub</strong>
+                    gitHub.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://tutsplus.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Tuts+ Network</strong>
+                    tutsplus.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://nodejs.org/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>node.js</strong>
+                    nodejs.org
+                  </a>
+                </li>
+                <li>
+                  <a href="http://stackoverflow.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Stack Overflow</strong>
+                    stackoverflow.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://www.typeisbeautiful.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Type is Beautiful</strong>
+                    typeisbeautiful.com
+                  </a>
+                </li>
+                <li>
+                  <a href="http://www.wolframalpha.com/" rel="bookmark" target="_blank">
+                    <div class="x_icon"></div>
+                    <strong>Wolfram | Alpha</strong>
+                    wolframalpha.com
+                  </a>
+                </li>
+            </ul>
+          </article>
+      </section>
 
-    	<section id="Design" class="x_cat">
+      <section id="Design" class="x_cat">
 
-    		<article>
-        	    <h2>ハコ★彡</h2>
-        	    <div class="notes">
-        	        <p>icon design, for a Mac Application...</p>
-        	    </div>
-        	    <aside id="Hako" class="x_image">
-        	        <a href="http://cl.ly/BX7W">1280*800</a>
-        	    </aside>
-        	</article>
+          <article>
+              <h2>ハコ★彡</h2>
+              <div class="notes">
+                  <p>icon design, for a Mac Application...</p>
+              </div>
+              <aside id="Hako" class="x_image">
+                  <a href="http://cl.ly/BX7W">1280*800</a>
+              </aside>
+          </article>
 
-        	<article>
-        	    <h2>Mondrian-Glider</h2>
-        	    <div class="notes">
-        	        <p>Inspired by「Composition with Red Blue Yellow」-Piet Cornelies Mondrian and Hackers' emblem :「<a href="http://www.catb.org/%7Eesr/hacker-emblem/" target="_blank">Glider</a>」. </p>
-        	        <p>It's a nice idea for the cover design of 「Hackers and Painters」by Paul Graham.</p>
-        	    </div>
-        	    <aside id="Glider" class="x_image">
-        	        <a href="http://cl.ly/BQQV">900*900</a>
-        	    </aside>
-        	</article>
+          <article>
+              <h2>Mondrian-Glider</h2>
+              <div class="notes">
+                  <p>Inspired by「Composition with Red Blue Yellow」-Piet Cornelies Mondrian and Hackers' emblem :「<a href="http://www.catb.org/%7Eesr/hacker-emblem/" target="_blank">Glider</a>」. </p>
+                  <p>May be a nice idea for the cover design of 「Hackers and Painters」by Paul Graham.</p>
+              </div>
+              <aside id="Glider" class="x_image">
+                  <a href="http://cl.ly/BQQV">900*900</a>
+              </aside>
+          </article>
 
-        	<article>
-        	    <h2>Bangumi-Etokei</h2>
-        	    <div class="notes">
-        	        <p>Special design for the「<a href="http://bangumi.tv/tokei/hour/18" target="_blank">etokei</a> 绘时计」activity of bangumi.tv (also bgm.tv). </p>
-        	    </div>
-        	    <aside id="Etokei" class="x_image">
-        	        <a href="http://bangumi.tv/tokei/paint/442">Preview @etokei</a>
-        	    </aside>
-        	</article>
+          <article>
+              <h2>Bangumi-Etokei</h2>
+              <div class="notes">
+                  <p>Special design for <a href="http://bangumi.tv/tokei/hour/18" target="_blank">etokei.</a></p>
+              </div>
+              <aside id="Etokei" class="x_image">
+                  <a href="http://bangumi.tv/tokei/paint/442">Preview @etokei</a>
+              </aside>
+          </article>
 
-        	<article>
-        	    <h2>Dollars-Suit</h2>
-        	    <div class="notes">
-        	        <p>Ai, psd &amp; html suit.</p>
-        	        <p>Clone the UI from japanese Anime <a href="http://bangumi.tv/subject/2463" target="_blank">durarara!!</a></p>
-        	    </div>
-        	    <aside id="Dollars" class="x_image">
-        	        <a href="http://d.pr/Ki9V">Download Suit</a>
-        	    </aside>
-        	</article>
+          <article>
+              <h2>Dollars-Suit</h2>
+              <div class="notes">
+                  <p>Ai, psd &amp; html suit.</p>
+                  <p>Clone the UI from Anime <a href="http://bangumi.tv/subject/2463" target="_blank">durarara!!</a></p>
+              </div>
+              <aside id="Dollars" class="x_image">
+                  <a href="http://d.pr/Ki9V">Download Suit</a>
+              </aside>
+          </article>
 
-    	</section>
+      </section>
 
-	</div>
+  </div>
 </div>
 <footer><div id="Bottom"><a href="#" class="transition" rel="copyright">© 2011-2012 Lancee's Yggdrasil all rights reserved</a></div></footer>
 <script type="text/javascript" src="//www.hellobar.com/hellobar.js"></script>
