--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="static/js/jquery.easing.1.3.js" type="text/javascript"></script>
-  <script src="static/js/jquery.xrhyme.1.0.1.min.js?v=20120610" type="text/javascript"></script>
-  <script src="static/js/bg.scroll.js" type="text/javascript"></script>
+  <script src="static/js/jquery.xrhyme.1.0.1.min.js" type="text/javascript"></script>
   <script type="text/javascript">
   $(document).ready(function(){
       $('#XContainer').xrhyme({
@@ -69,17 +68,19 @@
               over the garden nights.
               Death, the gray mocker,
               comes and whispers to you......</p>
-              <p>Always been a ACGer @<a href="http://bangumi.tv/user/lancee" target="_blank">Bangumi.tv</a></p>
-              <p id="Blog">And here is my writing <a href="http://lancee.blogbus.com/" rel="me">Blog»</a></p>
+              <p>I'm not a Wizard★彡hmmm... but a <del>Writer</del> Demon Hunter<sup>#1381</sup></p>
+              <p>acger@<a href="http://bangumi.tv/user/lancee" target="_blank">bgm.tv</a>
+                <span class="amp">&amp;</span>
+                my <a id="Blog" href="http://lancee.blogbus.com/" rel="me">log »</a></p>
           </article>
           <div class="split"></div>
           <div>Scrolling background via <a href="http://youlove.us/blog/the-youloveus-scrolling-background-effect-explained/" target="_blank">youlove.us</a></div>
           <ul id="Social" class="clearfix">
               <li><a href="http://about.me/lancee/" rel="me">About</a></li>
-              <li><a href="http://www.quora.com/Lancee-Ly/" rel="me">Quora</a></li>
+              <li><a href="https://github.com/lancee/" rel="me">Github</a></li>
+              <li><a href="http://www.quora.com/Lancee-Yggdrasil/" rel="me">Quora</a></li>
               <li><a href="http://forrst.me/lancee/" rel="me">Forrst</a></li>
               <li><a href="http://cn.last.fm/user/lanceee/" rel="me">Last.fm</a></li>
-              <li><a href="http://www.flickr.com/photos/ly-lancee/" rel="me">Flickr</a></li>
               <li><a href="https://foursquare.com/lanceee" rel="me">Foursquare</a></li>
               <li id="Twitter"><a href="http://twitter.com/lanceee/" rel="me">Twitter</a></li>
           </ul>
@@ -90,7 +91,7 @@
               <h2>X-Rhyme.js</h2>
               <div class="notes">
                   <p>X-Rhyme.js is a jQuery plugin for horizontal websites.</p>
-                  <p>Helps you build horizontal pages easier, check out demos within» : )</p>
+                  <p>Helps you build horizontal pages easier, check out demos within » ; )</p>
               </div>
               <aside id="XRhymejs" class="x_image">
                   <a href="https://github.com/lancee/x-rhyme.js">fork on github</a>
@@ -261,6 +262,7 @@
   </div>
 </div>
 <footer><div id="Bottom"><a href="#" class="transition" rel="copyright">© 2011-2012 Lancee's Yggdrasil all rights reserved</a></div></footer>
+<script src="static/js/bg.scroll.js" type="text/javascript"></script>
 <script type="text/javascript" src="//www.hellobar.com/hellobar.js"></script>
 <script type="text/javascript">
     new HelloBar(15580,23593);
