--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="all" />
 
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="static/css/xrhyme.css?v=20120610" />
-  <link rel="stylesheet" type="text/css" href="static/css/data-image.css?v=20120610" />
+  <link rel="stylesheet" type="text/css" href="static/css/xrhyme.css" />
+  <link rel="stylesheet" type="text/css" href="static/css/data-image.css" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="static/js/jquery.easing.1.3.js" type="text/javascript"></script>
@@ -68,7 +68,7 @@
               over the garden nights.
               Death, the gray mocker,
               comes and whispers to you......</p>
-              <p>I'm not a Wizard★彡hmmm... but a <del>Writer</del> Demon Hunter<sup>#1381</sup></p>
+              <p>I'm not a Wizard★彡hmmm... but a <del>Writer</del> Demon Hunter<sup id="Diablo">#1381</sup></p>
               <p>acger@<a href="http://bangumi.tv/user/lancee" target="_blank">bgm.tv</a>
                 <span class="amp">&amp;</span>
                 my <a id="Blog" href="http://lancee.blogbus.com/" rel="me">log »</a></p>
