--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="Cat"></div>
     <nav id="Nav">
       <ol class="clearfix">
-        <li id="Avatar"><a href="#Profile" title="Lancee" rel="me"></a></li>
+        <li id="Avatar"><a href="#Profile" title="Lancee"></a></li>
         <li><a href="#Works">Works</a></li>
         <li><a href="#Mark">Mark</a></li>
         <li><a href="#Design">LA.Ngised</a></li>
@@ -69,20 +69,20 @@
               Death, the gray mocker,
               comes and whispers to you......</p>
               <p>I'm not a Wizard★彡hmmm... but a <del>Writer</del> Demon Hunter<sup id="Diablo">#1381</sup></p>
-              <p>acger@<a href="http://bangumi.tv/user/lancee" target="_blank">bgm.tv</a>
+              <p>acger@<a href="http://bangumi.tv/user/lancee" rel="external nofollow me">bgm.tv</a>
                 <span class="amp">&amp;</span>
-                my <a id="Blog" href="http://lancee.blogbus.com/" rel="me">log »</a></p>
+                my <a id="Blog" href="http://lancee.blogbus.com/" rel="external nofollow me">log »</a></p>
           </article>
           <div class="split"></div>
-          <div>Scrolling background via <a href="http://youlove.us/blog/the-youloveus-scrolling-background-effect-explained/" target="_blank">youlove.us</a></div>
+          <div>Scrolling background via <a href="http://youlove.us/blog/the-youloveus-scrolling-background-effect-explained/" rel="external nofollow">youlove.us</a></div>
           <ul id="Social" class="clearfix">
-              <li><a href="http://about.me/lancee/" rel="me">About</a></li>
-              <li><a href="https://github.com/lancee/" rel="me">Github</a></li>
-              <li><a href="http://www.quora.com/Lancee-Yggdrasil/" rel="me">Quora</a></li>
-              <li><a href="http://forrst.me/lancee/" rel="me">Forrst</a></li>
-              <li><a href="http://cn.last.fm/user/lanceee/" rel="me">Last.fm</a></li>
-              <li><a href="https://foursquare.com/lanceee" rel="me">Foursquare</a></li>
-              <li id="Twitter"><a href="http://twitter.com/lanceee/" rel="me">Twitter</a></li>
+              <li><a href="http://about.me/lancee/" rel="external nofollow me">About</a></li>
+              <li><a href="https://github.com/lancee/" rel="external nofollow me">Github</a></li>
+              <li><a href="http://www.quora.com/Lancee-Yggdrasil/" rel="external nofollow me">Quora</a></li>
+              <li><a href="http://forrst.me/lancee/" rel="external nofollow me">Forrst</a></li>
+              <li><a href="http://cn.last.fm/user/lanceee/" rel="external nofollow me">Last.fm</a></li>
+              <li><a href="https://foursquare.com/lanceee" rel="external nofollow me">Foursquare</a></li>
+              <li id="Twitter"><a href="http://twitter.com/lanceee/" rel="external nofollow me">Twitter</a></li>
           </ul>
       </section>
 
@@ -94,7 +94,7 @@
                   <p>Helps you build horizontal pages easier, check out demos within » ; )</p>
               </div>
               <aside id="XRhymejs" class="x_image">
-                  <a href="https://github.com/lancee/x-rhyme.js">fork on github</a>
+                  <a href="https://github.com/lancee/x-rhyme.js" rel="external nofollow me">fork on github</a>
               </aside>
           </article>
 
@@ -103,107 +103,107 @@
       <section id="Mark" class="x_cat">
           <article>
               <h2>Capriccioso cantabile〜☆</h2>
-            <ul class="clearfix">
+              <ul class="clearfix">
                 <li>
-                  <a href="http://www.v2ex.com/" rel="bookmark" target="_blank">
+                  <a href="http://www.v2ex.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>V2EX</strong>
                     v2ex.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://dribbble.com/" rel="bookmark" target="_blank">
+                  <a href="http://dribbble.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Dribbble</strong>
                     dribbble.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://demoslam.com/" rel="bookmark" target="_blank">
+                  <a href="http://demoslam.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Google Demo Slam</strong>
                     demoslam.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://www.quora.com/" rel="bookmark" target="_blank">
+                  <a href="http://www.quora.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Quora</strong>
                     quora.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://www.smashingmagazine.com/" rel="bookmark" target="_blank">
+                  <a href="http://www.smashingmagazine.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Smashing Magazine</strong>
                     smashingmagazine.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://html5boilerplate.com/" rel="bookmark" target="_blank">
+                  <a href="http://html5boilerplate.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>HTML5 Boilerplate</strong>
                     html5boilerplate.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://forrst.com/" rel="bookmark" target="_blank">
+                  <a href="http://forrst.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Forrst</strong>
                     forrst.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://start.io/" rel="bookmark" target="_blank">
+                  <a href="http://start.io/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>start.io</strong>
                     start.io
                   </a>
                 </li>
                 <li>
-                  <a href="http://cssline.com/" rel="bookmark" target="_blank">
+                  <a href="http://cssline.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>CSSline</strong>
                     cssline.com
                   </a>
                 </li>
                 <li>
-                  <a href="https://github.com/" rel="bookmark" target="_blank">
+                  <a href="https://github.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>GitHub</strong>
                     gitHub.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://tutsplus.com/" rel="bookmark" target="_blank">
+                  <a href="http://tutsplus.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Tuts+ Network</strong>
                     tutsplus.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://nodejs.org/" rel="bookmark" target="_blank">
+                  <a href="http://nodejs.org/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>node.js</strong>
                     nodejs.org
                   </a>
                 </li>
                 <li>
-                  <a href="http://stackoverflow.com/" rel="bookmark" target="_blank">
+                  <a href="http://stackoverflow.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Stack Overflow</strong>
                     stackoverflow.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://www.typeisbeautiful.com/" rel="bookmark" target="_blank">
+                  <a href="http://www.typeisbeautiful.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Type is Beautiful</strong>
                     typeisbeautiful.com
                   </a>
                 </li>
                 <li>
-                  <a href="http://www.wolframalpha.com/" rel="bookmark" target="_blank">
+                  <a href="http://www.wolframalpha.com/" rel="external nofollow bookmark">
                     <div class="x_icon"></div>
                     <strong>Wolfram | Alpha</strong>
                     wolframalpha.com
@@ -221,28 +221,28 @@
                   <p>icon design, for a Mac Application...</p>
               </div>
               <aside id="Hako" class="x_image">
-                  <a href="http://cl.ly/BX7W">1280*800</a>
+                  <a href="http://cl.ly/BX7W" rel="external nofollow">1280*800</a>
               </aside>
           </article>
 
           <article>
               <h2>Mondrian-Glider</h2>
               <div class="notes">
-                  <p>Inspired by「Composition with Red Blue Yellow」-Piet Cornelies Mondrian and Hackers' emblem :「<a href="http://www.catb.org/%7Eesr/hacker-emblem/" target="_blank">Glider</a>」. </p>
+                  <p>Inspired by「Composition with Red Blue Yellow」-Piet Cornelies Mondrian and Hackers' emblem :「<a href="http://www.catb.org/%7Eesr/hacker-emblem/"  rel="external nofollow">Glider</a>」. </p>
                   <p>May be a nice idea for the cover design of 「Hackers and Painters」by Paul Graham.</p>
               </div>
               <aside id="Glider" class="x_image">
-                  <a href="http://cl.ly/BQQV">900*900</a>
+                  <a href="http://cl.ly/BQQV" rel="external nofollow">900*900</a>
               </aside>
           </article>
 
           <article>
               <h2>Bangumi-Etokei</h2>
               <div class="notes">
-                  <p>Special design for <a href="http://bangumi.tv/tokei/hour/18" target="_blank">etokei.</a></p>
+                  <p>Special design for <a href="http://bangumi.tv/tokei/hour/18"  rel="external nofollow">etokei.</a></p>
               </div>
               <aside id="Etokei" class="x_image">
-                  <a href="http://bangumi.tv/tokei/paint/442">Preview @etokei</a>
+                  <a href="http://bangumi.tv/tokei/paint/442" rel="external nofollow">Preview @etokei</a>
               </aside>
           </article>
 
@@ -250,10 +250,10 @@
               <h2>Dollars-Suit</h2>
               <div class="notes">
                   <p>Ai, psd &amp; html suit.</p>
-                  <p>Clone the UI from Anime <a href="http://bangumi.tv/subject/2463" target="_blank">durarara!!</a></p>
+                  <p>Clone the UI from Anime <a href="http://bangumi.tv/subject/2463"  rel="external nofollow">durarara!!</a></p>
               </div>
               <aside id="Dollars" class="x_image">
-                  <a href="http://d.pr/Ki9V">Download Suit</a>
+                  <a href="http://d.pr/Ki9V" rel="external nofollow">Download Suit</a>
               </aside>
           </article>
 
