--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
               <li><a href="http://www.quora.com/Lancee-Yggdrasil/" rel="external nofollow me">Quora</a></li>
               <li><a href="http://forrst.me/lancee/" rel="external nofollow me">Forrst</a></li>
               <li><a href="http://cn.last.fm/user/lanceee/" rel="external nofollow me">Last.fm</a></li>
-              <li><a href="https://foursquare.com/lanceee" rel="external nofollow me">Foursquare</a></li>
+              <li><a href="https://foursquare.com/lanceee/" rel="external nofollow me">Foursquare</a></li>
+              <li><a href="https://plus.google.com/114151338240230217868/" rel="external nofollow me">G+</a></li>
               <li id="Twitter"><a href="http://twitter.com/lanceee/" rel="external nofollow me">Twitter</a></li>
           </ul>
       </section>
